style.css
#title{
  font-weight: bold;
  text-align: center;
  margin-top: 50px;
  margin-bottom: 35px;
}

.slider{
  appearance: none;
  width: 100%;
  height: 5px;
  background-color: #0275d8;
  outline: none;
  opacity: 75%;
  transition: .05s;
}

.slider:hover {
  opacity: 100%;
}

#btn{
  text-align: center;
}

#showArray {
  text-align: center;
}

div.centered      { width: 2vh; }
div#columns       { width: 750px;  margin: 0 auto;}
div#columns div   { width: 4vh; height: 4vh; float: left; text-align: center; outline-style: solid;}
div.col           { margin-bottom: 10px; margin-right: 10px; text-align: center;}
div.red           { background-color: #e14e32; }
div.green         { background-color: lightgreen; }
/* div.clear         { clear: both; } */

